<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pos.com.final_built.ui.main.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />


    <fragment
        android:id="@+id/nav_Balance"
        android:name="pos.com.final_built.ui.main.BalanceFragment"
        android:label="@string/balance"
        tools:layout="@layout/balance_fragment" />

    <fragment
        android:id="@+id/nav_Account"
        android:name="pos.com.final_built.ui.accountinfo.accountInfoFragment"
        android:label="@string/Account"
        tools:layout="@layout/account_info_fragment" />

</navigation>