<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.HomeFragment">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/cardview_light_background"
        android:background="@color/lamegreen_for_One"
        android:text="@string/one"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintEnd_toStartOf="@+id/three"
      />

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="100dp"
        android:text="@string/two"
        android:textColor="@color/cardview_light_background"
        android:background="@color/for_two"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintEnd_toStartOf="@+id/four"
         />

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/blue_for_three"
        android:text="@string/three"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="120dp"
        android:text="@string/four"
        android:background="@color/for_four"
        android:textColor="@color/cardview_light_background"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:background="@color/pink_for_five"
        android:text="@string/five"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="@+id/message"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/message"
        app:layout_constraintTop_toBottomOf="@+id/message" />

<!--    <ScrollView-->
<!--        android:id="@+id/scrollView2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="200dp"-->


<!--        app:layout_constraintTop_toBottomOf="@+id/message">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->


<!--            android:orientation="vertical"-->


<!--            >-->

<!--            <TextView-->
<!--                android:id="@+id/textView2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                -->
<!--                />-->

<!--        </LinearLayout>-->


<!--    </ScrollView>-->

</androidx.constraintlayout.widget.ConstraintLayout>